Upgrade xstream to fix java 16 compatibility